--- a/src/css/MainPage.css
+++ b/src/css/MainPage.css
@@ -1,4 +1,4 @@
-.bgstyle {
+/* .bgstyle {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -111,4 +111,4 @@
     font-weight: 700;
     font-family: Microsoft Yahei;
   }
-  
+   */
