修正了全局样式文件

--- a/src/style.less
+++ b/src/style.less
@@ -1,5 +1,6 @@
 @import '~ant-design-vue/dist/antd.less'; // 引入官方提供的 less 样式入口文件
-@primary-color: #829083; // 全局主色 
+@primary-color: #577f49; // 全局主色 
 @success-color: #52c41a; // 成功色
 @warning-color: #faad14; // 警告色
 @error-color: #f5222d; // 错误色  
+@alert-info-bg-color: #f5faf2;
